cloudides/python/envoy.conf.yaml
static_resources:
    listeners:
          - name: listener_0
            address:
              socket_address:
                address: 0.0.0.0
                port_value: 80
            filter_chains:
              - filters:
                  - name: envoy.filters.network.http_connection_manager
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                      stat_prefix: ingress_http
                      route_config:
                        name: local_route
                        virtual_hosts:
                          - name: jupyter_service
                            domains:
                              - "*"
                            routes:
                              - match:
                                  prefix: "/jupyter"
                                route:
                                  cluster: jupyter_cluster
                              - match:
                                  prefix: "/"
                                route:
                                  cluster: default_cluster
                      http_filters:
                        - name: envoy.filters.http.router
    clusters:
      - name: jupyter_cluster
        connect_timeout: 0.25s
        type: logical_dns
        lb_policy: round_robin
        load_assignment:
          cluster_name: jupyter_cluster
          endpoints:
            - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: 127.0.0.1
                        port_value: 8888
      - name: default_cluster
        connect_timeout: 0.25s
        type: logical_dns
        lb_policy: round_robin
        load_assignment:
          cluster_name: default_cluster
          endpoints:
            - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: 127.0.0.1
                        port_value: 8443
admin:
    access_log_path: /tmp/admin_access.log
    address:
        socket_address:
            address: 0.0.0.0
            port_value: 9901
